@@ -1,3 +1,7 @@
+2006-10-23  Daiki Ueno  <ueno@unixuser.org>
+
+	* mixi.el (mixi-curl-retrieve): New function.
+
 2006-10-23  OHASHI Akira  <bg66@koka-in.org>
 
 	* mixi.el (mixi-get-matched-items): Don't convert string to number.
